--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/int-ExIT/UniMedTPI#readme",
   "dependencies": {
+    "datatables.net-dt": "^2.3.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
