--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trabajo Practico Integrador",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/int-ExIT/UniMedTPI#readme",
   "dependencies": {
-    "datatables.net-dt": "^2.3.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
