--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Trabajo Practico Integrador",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start-db": "node ./models/index.model.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "morgan": "^1.10.0"
   }
 }
