--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "start-db": "node ./models/index.model.js"
+    "start:db": "node ./models/index.model.js"
   },
   "repository": {
     "type": "git",
