--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "",
-    "database": "uni_med",
-    "host": "localhost",
-    "dialect": "mysql"
+    "password": "fSfsUsebMNytFsOgMMGKyGVnisPECwXz",
+    "database": "railway",
+    "host": "caboose.proxy.rlwy.net",
+    "dialect": "mysql",
+    "port": 31187
   },
   "test": {},
   "production": {}
