--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start:db": "node ./models/index.model.js"
+    "start:db": "node ./models/index.model.js",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
