--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "start:db": "node ./models/index.model.js",
     "seed": "npx sequelize-cli db:seed:all"
   },
@@ -20,9 +21,12 @@
   },
   "homepage": "https://github.com/int-ExIT/UniMedTPI#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7"
